--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -1,3 +1,36 @@
 <div>
     usuarios
 </div>
+
+<div>
+    <label>ID </label>
+    <input type="text" id="id" name="id">
+</div>
+<div>
+    <label>Nombre </label>
+    <input type="text" id="nombre" name="nombre">
+</div>
+<div>
+    <label>Apellido</label>
+    <input type="text" id="apellido" name="apellido">
+</div>
+<div>
+    <input type="button" name="add" id="add" value="Enviar">
+</div>
+
+
+<h1>Listado de Usuarios</h1>
+<table id="tabla1" name="tabla1">
+    <tr>
+
+        <td><strong>Cons</strong></td>
+        <td><strong>ID</strong></td>
+        <td><strong>Nombre</strong></td>
+        <td><strong>Apellido</strong></td>
+    </tr>
+
+
+
+
+
+</table>
