--- a/app/templates/versioner.html
+++ b/app/templates/versioner.html
@@ -4,6 +4,10 @@
         <textarea id="ver-text"></textarea>
     </div> 
     <div style="display:inline">
-        <input id="inp-command" placeholder="comando"> <button id="commander">go</button>
+        <input id="inp-command" placeholder="comando"> 
+        <select id="select-user" name="select-name">
+            <option value="0">Seleccionar  Usuario</option>
+        </select>
+        <button id="commander">go</button>
     </div>    
 </div>
